## GoogleHashCode C++: an Cpp project for Google Hash Code

AC_INIT([GoogleHashCode C++], [0.1], [cedric.lamoriniere@gmail.com],
        [GoogleHashCode_cc], [http://www.github.com/cedriclam/googlehashcode_cpp])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])

AC_CONFIG_HEADERS([config.hpp])
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
